# AuroraCMS

./: .env  .gitignore  .readthedocs  CONTRIBUTING.md  Cargo.toml  README.md  TREE.md  jest.config.js  jest.setup.js  package.json  tsconfig.json  vite.config.js
docs/: requirements.txt
public/: index.html  manifest.json
src/: App.tsx  Index.tsx  config.rs  errors.rs  main.rs
src/api/: auth.rs  auth.ts  mod.rs  payments.ts  reservations.ts  sites.rs  sites.ts  tenants.rs  users.rs  users.ts
src/components/Button/: Button.module.scss  Button.test.tsx  Button.tsx
src/components/Card/: Card.module.scss  Card.test.tsx  Card.tsx
src/components/Heading/: Heading.module.scss  Heading.tsx
src/components/Loader/: Loader.module.scss  Loader.test.tsx
src/components/Modal/: Modal.module.scss  Modal.test.tsx  Modal.tsx
src/components/Navbar/: Navbar.module.scss  Navbar.test.tsx  Navbar.tsx
src/components/Pagination/: Pagination.module.scss  Pagination.test.tsx  Pagination.tsx
src/components/Sidebar/: Sidebar.module.scss  Sidebar.test.tsx  Sidebar.tsx
src/components/Text/: Text.module.scss  Text.tsx
src/components/Tooltip/: Tooltip.module.scss  Tooltip.test.tsx  Tooltip.tsx
src/context/: AuthContext.tsx  ThemeContext.tsx
src/db/: mod.rs  models.rs
src/middleware/: auth_middleware.rs  mod.rs
src/pages/: Home.tsx  Login.tsx
src/server/: auth.ts  config.ts  configureDB.ts  logging.ts  middleware.ts  routes.ts  server.ts
src/server/database/: index.ts  sqlite.ts
src/server/middleware/: adminAccess.ts  errorHandler.ts  index.ts
src/server/routes/: index.ts  routes.auth.ts  routes.plugins.ts  routes.roles.ts  routes.sites.ts  routes.users.ts
src/server/scheduler/: index.ts
src/server/wp/: compatMap.json  index.ts  pluginLoader.ts  sandbox.ts  themeLoader.ts
src/services/: api.ts  authService.ts  emails.rs  jwt.rs  payments.rs
src/store/: useAuthStore.ts
src/styles/: globals.scss  variables.scss
src/types/: global.d.ts
src/utils/: SecurityLog.ts  logger.ts
