[package]
name = "auroracms"
version = "0.1.0"
edition = "2025"

[dependencies]
actix-web = "4"
actix-service = "2"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-actix-native-tls", "macros"] }
dotenv = "0.15"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
actix-cors = "0.6"
argon2 = "0.4"
once_cell = "1.17"
validator = { version = "0.16", features = ["derive"] }
lettre = { version = "0.10", features = ["tokio1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
