[package]
name = "auroracms-backend"
version = "0.1.0-dev"
edition = "2021"
authors = ["AuroraCMS Project <opensource@auroracms.org>"]
description = "AuroraCMS backend written in Rust with API, auth, plugin engine and DB abstraction."
license = "GPL-3.0-or-later"

[dependencies]
# Web server
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.3"
actix-service = "2.0.2"
actix-multipart = "0.6.1"
actix-identity = "0.6.1"
actix-session = { version = "0.8.0", features = ["cookie-session"] }

# JWT / Auth
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
oauth2 = "4.4.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
uuid = { version = "1.7.0", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Database
diesel = { version = "2.1.4", features = ["postgres", "sqlite", "mysql", "chrono", "r2d2"] }
dotenvy = "0.15"

# Async / general
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# File uploads
mime = "0.3"
mime_guess = "2.0"
uuid = { version = "1", features = ["v4"] }

# WP compatibility (PHP-WASM)
php-wasm = "0.3.1"  # hypothetically versioned crate – might need manual binding

# Feature flags (ex: for SQLite fallback)
[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite"]
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]

[build-dependencies]
diesel_migrations = "2.1.0"
